K8S/userservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: dwichynngrm/userservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: userservice
    protocol: TCP
    port: 80
    targetPort: 80
